# python-analysis-practice

./: .flake8  .gitignore  README.md  environment.yml  pyproject.toml
2022_Python_Data_Analysis_and_Visualization_Masterclass/: 04_dataframes_datasets.ipynb  05_basic_dataframe_methods_computations.ipynb  06_series_columns.ipynb  07_indexing_sorting.ipynb  08_filtering_dataframes.ipynb  09_adding_removing_columns.ipynb  10_updating_values.ipynb  11_types_na_values.ipynb  12_dates_times.ipynb  EXERCISE_02_Dataframe_Basics.ipynb  EXERCISE_03_DF_Analysis.ipynb  EXERCISE_04_Series.ipynb  EXERCISE_05_Indexes_Sorting.ipynb  EXERCISE_06_Filtering.ipynb  EXERCISE_07_Adding_Removing_Columns.ipynb  EXERCISE_08_Updating_Data.ipynb  EXERCISE_09_Types_NA.ipynb  EXERCISE_10_Dates.ipynb  course_info.txt
Data_Analysis_with_Polars/: course_info.txt  section_1_practice.ipynb
Python_for_Data_Analysis_3rd_Edition/: ch04_practice.ipynb  ch08_practice.ipynb  ch09_practice.ipynb  ch10_practice.ipynb  ch11_practice.ipynb  ch2_practice.ipynb  ch5_practice.ipynb  ch6_practice.ipynb  ch7_practice.ipynb  ch8_practice.ipynb  course_info.txt  quarto_practice.ipynb
The Modern Python 3 Bootcamp/: bouncer.py  calling_in_sick.py  course_info.txt  examples_sections_1-7.py  examples_sections_14-20.py  examples_sections_8-13.py  guessing_game.py  mileage_converter.py  rock_paper_scissors.py  rock_paper_scissors_v2.py
