[tool.poetry]
name = "python-analysis-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
lxml = "^5.2.2"
scipy = "^1.13.1"
patsy = "^0.5.6"
beautifulsoup4 = "^4.12.3"
hvplot = "^0.10.0"
plotly = "^5.22.0"
altair = "^5.3.0"
vegafusion = "^1.6.9"
scikit-learn = "^1.5.0"
polars = "^1.0.0"
polars-ols = "^0.3.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
nbqa = "^1.8.5"
nbstripout = "^0.7.1"
catppuccin-jupyterlab = "^0.2.2"
blacken-docs = "^1.16.0"
flake8-docstrings = "^1.7.0"
docrepr = "^0.2.0"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
